--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo Background-repeat</title>
+    <style>
+        body {
+            background-image: url('imagens/pattern003.png');
+            background-repeat: repeat-x;
+        }
+    </style>
 </head>
 <body>
-    
 </body>
 </html>
