--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -12,12 +12,15 @@
 
         table {
             width: 400px;
-            padding: 10px;
+
             border-collapse: collapse;
         }
 
         td {
             border: 1px solid black;
+            padding: 10px;
+            text-align: center; /*alinhamento horizontal*/
+            vertical-align: top; /*alinhamento vertical*/
         }
     </style>
 </head>
